tests/snapshots/integration_test__instanceof_builtin.snap
---
source: tests/integration_test.rs
expression: output
---
#[derive(Debug, Clone, PartialEq)]
pub enum HandleValueXType {
    Date(Date),
    Error(Error),
    RegExp(RegExp),
    Other(serde_json::Value),
}

#[derive(Debug, Clone, PartialEq)]
pub struct Date {
}

#[derive(Debug, Clone, PartialEq)]
pub struct Error {
}

#[derive(Debug, Clone, PartialEq)]
pub struct RegExp {
}

fn handleValue(x: HandleValueXType) -> String {
    if let HandleValueXType::Date(x) = x {
        return x.toISOString();
    }
    if let HandleValueXType::Error(x) = x {
        return x.message;
    }
    if let HandleValueXType::RegExp(x) = x {
        return x.source;
    }
    String(x)
}
