tests/snapshots/integration_test__interface_methods.snap
---
source: tests/integration_test.rs
expression: output
---
trait Serializable {
    fn serialize(&self) -> String;
    fn deserialize(&self, data: String);
}

#[derive(Debug, Clone, PartialEq)]
struct GreeterData {
    name: String,
}

trait Greeter {
    fn greet(&self) -> String;
}

impl Greeter for GreeterData {
    fn greet(&self) -> String {
        todo!()
    }
}

trait Animal {
    fn speak(&self) -> String;
}

trait Dog: Animal {
    fn bark(&self) -> String;
}

#[derive(Debug, Clone, PartialEq)]
struct Point {
    x: f64,
    y: f64,
}

#[derive(Debug, Clone, PartialEq)]
struct Point3D {
    pub x: f64,
    pub y: f64,
    z: f64,
}

trait Readable {
    fn read(&self) -> String;
}

trait Writable {
    fn write(&self, data: String);
}

trait ReadWrite: Readable + Writable {
}
