tests/snapshots/integration_test__interface_mixed.snap
---
source: tests/integration_test.rs
expression: output
---
pub type Handler = Box<dyn Fn(String) -> f64>;

pub struct Service {
    pub name: String,
}

pub trait ServiceTrait {
    fn start(&self);
    fn stop(&self) -> bool;
}

impl ServiceTrait for Service {
    pub fn start(&self) {
    }

    pub fn stop(&self) -> bool {
    }
}
