tests/snapshots/integration_test__keyword_types.snap
---
source: tests/integration_test.rs
expression: output
---
fn acceptAny(x: serde_json::Value) -> serde_json::Value {
    x
}

fn acceptUnknown(x: serde_json::Value) {
    return;
}

struct Flexible {
    data: serde_json::Value,
    value: serde_json::Value,
}
